Fix layout bug, patch env, add notify sound settings

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,6 +8,7 @@ body {
   font-size: 13px;
   -webkit-font-smoothing: antialiased;
   line-height: 1.42857143;
+  overflow-x: hidden;
 }
 .alert {
   border-radius: 0px;
